--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+DB_HOST=yamanote.proxy.rlwy.net
+DB_USER=root
+DB_PASSWORD=TbhyrVAQMBbZJjAKrWqbvBFVaVTiZvNm
+DB_NAME=railway
+DB_PORT=31720
 PORT=3000
+
 EMAIL_FROM=huancarodrigo1@gmail.com
 EMAIL_PASS=bgqu gjub dcwh gaiy
