--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ DB_PASSWORD=TbhyrVAQMBbZJjAKrWqbvBFVaVTiZvNm
 DB_NAME=railway
 DB_PORT=31720
 PORT=3000
+BASE_URL=https://backend-swqp.onrender.com
+FRONTEND_URL=https://gussrestobar.netlify.app/ # o la URL pública del frontend desplegado
 
 EMAIL_FROM=huancarodrigo1@gmail.com
 EMAIL_PASS=bgqu gjub dcwh gaiy
