--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ PORT=3000
 BASE_URL=https://backend-swqp.onrender.com
 FRONTEND_URL=https://gussrestobar.netlify.app/ # o la URL pública del frontend desplegado
 
-EMAIL_FROM=huancarodrigo1@gmail.com
-EMAIL_PASS=bgqu gjub dcwh gaiy
+EMAIL_FROM=gussrestobar@gmail.com
+EMAIL_PASS=avaj xmof vtru iojb
